fix: add missing endpoints for USD balances
