# api/docs/swagger.json
@@ -16,7 +16,7 @@
     "host": "localhost:8081",
     "basePath": "/api",
     "paths": {
-        "/balances": {
+        "/balances/coin": {
             "get": {
                 "security": [
                     {
@@ -31,6 +31,31 @@
                     "Trading"
                 ],
                 "summary": "Get coin balances",
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    }
+                }
+            }
+        },
+        "/balances/usd": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Fetches usd balances",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Trading"
+                ],
+                "summary": "Get usd balances",
                 "responses": {
                     "200": {
                         "description": "ok"
